# enunlg

./: .gitignore  environment.yml  pyproject.toml  pyproject.toml.cluster  pyproject.toml.desktop
config/: evaluate.yaml  multitask_seq2seq+attn.yaml  multitask_seq2seq+attn_drop-multitasking.yaml  multitask_transformer.yaml  sclstm_as-released.yaml  seq2seq+attn.yaml  tgen.yaml  tgen_classifier.yaml
config/data/: enriched-e2e_as-e2e.yaml  enriched-e2e_as-rdf.yaml  enriched-webnlg_as-e2e.yaml  enriched-webnlg_as-rdf.yaml
enunlg/: trainer.py  util.py  vocabulary.py
enunlg/convenience/: binary_mr_classifier.py
enunlg/data_management/: cued.py  e2e_challenge.py  enriched_e2e.py  enriched_webnlg.py  iocorpus.py  loader.py  neural_methodius.py  pipelinecorpus.py  webnlg.py
enunlg/embeddings/: __init__.py  binary.py  glove.py  onehot.py
enunlg/encdec/: multitask_seq2seq.py  sclstm.py  seq2seq.py  tgen.py
enunlg/formats/xml/: enriched_webnlg.py
enunlg/generators/: multitask_seq2seq.py  tgen.py
enunlg/meaning_representation/: dialogue_acts.py  slot_value.py
enunlg/nlu/: binary_mr_classifier.py
enunlg/normalisation/: norms.py  tokenisation.py
enunlg/pipelines/: lookup_pipeline.py  multitask_seq2seq.py  seq2seq_pipeline.py
enunlg/templates/: lookup.py
enunlg/trainer/: __init__.py  base.py  binary_mr_classifier.py  multitask_seq2seq.py  sclstm.py  seq2seq.py  tgen.py
scripts/: corpus_to_humeval_csv.py  evaluate.py  fetch_dataset.bash  find_most_recent_models.py  multitask_seq2seq+attn.py  multitask_transformer.py  prepare_pipeline_corpus.py  sclstm.py  seq2seq+attn.py  stanza-process.py  tgen.py  tgen_classifier.py
